--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,11 +19,11 @@
   </head>
 
   <body>
-
-  <div id="app"></div>
+    <div id="app"></div>
+  </body>
   
   <script src="/public/js/libraries.js" type="text/javascript" charset="utf-8"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="/public/js/templates.js" type="text/javascript" charset="utf-8"></script>
   <script src="/public/js/main.js"      type="text/javascript" charset="utf-8"></script>
-  </body>
 </html>
