--- a/public/index2.html
+++ b/public/index2.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/dashboard.css">
     <link rel="stylesheet" type="text/css" href="/public/css/application.css">
-    <link href="/public/dashio/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -37,4 +36,15 @@
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="/public/js/templates.js" type="text/javascript" charset="utf-8"></script>
   <script src="/public/js/main.js"      type="text/javascript" charset="utf-8"></script>
+
+  <!-- js placed at the end of the document so the pages load faster -->
+  <script src="/public/dashio/assets/js/jquery.js"></script>
+  <script src="/public/dashio/assets/js/bootstrap.min.js"></script>
+  <script class="include" type="text/javascript" src="assets/js/jquery.dcjqaccordion.2.7.js"></script>
+  <script src="/public/dashio/assets/js/jquery.scrollTo.min.js"></script>
+  <script src="/public/dashio/assets/js/jquery.nicescroll.js" type="text/javascript"></script>
+  <!--common script for all pages-->
+  <script src="/public/dashio/assets/js/common-scripts.js"></script>
+
+
 </html>
