--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,10 @@
     <![endif]-->
   </head>
 
-  <body>
     <div id="app"></div>
-  </body>
   
 
-  <!-- Dashio testing -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.4/d3.min.js"></script>
   <script src="/public/js/libraries.js" type="text/javascript" charset="utf-8"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="/public/js/templates.js" type="text/javascript" charset="utf-8"></script>
